--- a/playbook.yml
+++ b/playbook.yml
@@ -16,13 +16,12 @@
           name: thongle0610/nginx:jenkins
           source: pull
     - name: Create a container
-      docker_container:
-        name: mynginx
-        image: thongle0610/nginx:jenkins
-        command: sleep 1d
-        state: started
+      # docker_container:
+      #   name: mynginx
+      #   image: thongle0610/nginx:jenkins
+      #   command: sleep 1d
+      #   state: started
+      shell: docker run -d -p 8001:80 thongle0610/nginx:jenkins
         # recreate: yes
-        ports:
-          - "88:80"
 ...
   
