--- a/playbook.yml
+++ b/playbook.yml
@@ -11,6 +11,11 @@
         state: present
     - name: Login DockerHub
       shell: docker login -u "{{DOCKER_USERNAME}}" -p "{{DOCKER_PASSWORD}}"
+    - name: Remove image
+      docker_image:
+        state: absent
+        name: thongle0610/nginx
+        tag: jenkins
     - name: pull an image
       docker_image:
           name: thongle0610/nginx:jenkins
